--- a/index.html
+++ b/index.html
@@ -110,8 +110,30 @@
 
 <!--  Delivery featres section -->
 
-<div class="delivery"></div>
-<div class=""></div>
+<div class="delivery">
+  <h2>Zynpay Delivery Features.</h2>
+  <p>Zynpay delivers seamless transactions with<br />Secure transfer and rewards.</p>
+</div>
+
+<div class="menu-list">
+  <div class="menu-box">
+      <img src="./images/tracking.png" alt="Item 1">
+      <h2>Automatically Tracking <br> <span>Effortlessly monitor your expenses and gain insights into spending</span></h2>
+  </div>
+  <div class="menu-box">
+      <img src="./images/bill payment.png" alt="Item 2">
+      <h2>Simplified Bill Payments <br> <span>Easily manage and pay bills on time hassle-free and convenient</span></h2>
+  </div>
+  <div class="menu-box">
+      <img src="./images/monitoring2 .png" alt="Item 3">
+      <h2>Live Money Monitoring <br> <span>Stay informed with real-time updates on your financial activity</span></h2>
+  </div>
+  <div class="menu-box">
+      <img src="./images/syncing.png" alt="Item 4">
+      <h2>Seamless Bank Syncing <br> <span>Automatically connect and sync your bank accounts for smooth transactions</span></h2>
+  </div>
+</div>
+
 
   </body>
 </html>
