--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       }
     </script>
   </head>
-  <body>
     <!-- Navbar -->
     <nav class="navbar">
       <div class="logo">
@@ -25,7 +24,7 @@
         <li><a href="#">Pages</a></li>
         <li><a href="#">Pricing</a></li>
       </ul>
-     
+
       <div class="menu-icon" onclick="toggleMenu()">☰</div>
     </nav>
 
@@ -86,54 +85,101 @@
         <img src="images/image.png" alt="Payment Illustration" />
       </div>
     </div>
-     <!-- Full-width Info Section -->
-     <div class="info-section">
-        <div class="info-text">
-          <p>Leading Financial App<br />Trusted by Millions</p>
-        </div>
 
-        <div class="stats-container">
-          <div class="stat-box">
-            <span class="big-text">1.2M+</span>
-            <p>Downloads on App Store</p>
-          </div>
-          <div class="stat-box">
-            <span class="big-text">4.7</span>
-            <p>Rating out of 5</p>
-          </div>
-          <div class="stat-box">
-            <span class="big-text">1.5B</span>
-            <p>Transactions Done</p>
-          </div>
-        </div>
+
+    <!-- Info Section -->
+    <div class="info-section">
+      <div class="info-text">
+        <p>Leading Financial App<br />Trusted by Millions</p>
       </div>
 
-<!--  Delivery featres section -->
-
-<div class="delivery">
-  <h2>Zynpay Delivery Features.</h2>
-  <p>Zynpay delivers seamless transactions with<br />Secure transfer and rewards.</p>
-</div>
-
-<div class="menu-list">
-  <div class="menu-box">
-      <img src="./images/tracking.png" alt="Item 1">
-      <h2>Automatically Tracking <br> <span>Effortlessly monitor your expenses and gain insights into spending</span></h2>
-  </div>
-  <div class="menu-box">
-      <img src="./images/bill payment.png" alt="Item 2">
-      <h2>Simplified Bill Payments <br> <span>Easily manage and pay bills on time hassle-free and convenient</span></h2>
-  </div>
-  <div class="menu-box">
-      <img src="./images/monitoring2 .png" alt="Item 3">
-      <h2>Live Money Monitoring <br> <span>Stay informed with real-time updates on your financial activity</span></h2>
-  </div>
-  <div class="menu-box">
-      <img src="./images/syncing.png" alt="Item 4">
-      <h2>Seamless Bank Syncing <br> <span>Automatically connect and sync your bank accounts for smooth transactions</span></h2>
-  </div>
-</div>
+      <div class="stats-container">
+        <div class="stat-box">
+          <span class="big-text">1.2M+</span>
+          <p>Downloads on App Store</p>
+        </div>
+        <div class="stat-box">
+          <span class="big-text">4.7</span>
+          <p>Rating out of 5</p>
+        </div>
+        <div class="stat-box">
+          <span class="big-text">1.5B</span>
+          <p>Transactions Done</p>
+        </div>
+      </div>
+    </div>
 
 
+    <!--  Delivery featres section -->
+    <div class="delivery">
+      <h2>Zynpay Delivery Features.</h2>
+      <p>
+        Zynpay delivers seamless transactions with<br />Secure transfer and
+        rewards.
+      </p>
+    </div>
+
+
+  <!-- Menu container -->
+  <div class="menu-container">
+    <div class="menu-list">
+      <div class="menu-box">
+        <img src="./images/tracking.png" alt="Item 1" />
+        <h2>
+          Automatically Tracking <br />
+          <span
+            >Effortlessly monitor your expenses and gain insights into
+            spending</span
+          >
+        </h2>
+      </div>
+      <div class="menu-box">
+        <img src="./images/bill payment.png" alt="Item 2" />
+        <h2>
+          Simplified Bill Payments <br />
+          <span
+            >Easily manage and pay bills on time hassle-free and
+            convenient</span
+          >
+        </h2>
+      </div>
+      <div class="menu-box">
+        <img src="./images/monitoring2 .png" alt="Item 3" />
+        <h2>
+          Live Money Monitoring <br />
+          <span
+            >Stay informed with real-time updates on your financial
+            activity</span
+          >
+        </h2>
+      </div>
+      <div class="menu-box">
+        <img src="./images/syncing.png" alt="Item 4" />
+        <h2>
+          Seamless Bank Syncing <br />
+          <span
+            >Automatically connect and sync your bank accounts for smooth
+            transactions</span
+          >
+        </h2>
+      </div>
+    </div>
+
+    <div class="bankschema-image">
+      <img src="./images/banking scheme.png" alt="Payment Illustration" />
+    </div>
+  </div>
+
+
+  <!-- Success container -->
+
+  <div class="success">
+    <div class="success-text">
+      <h2>Simple Steps to Success</h2>
+      <p>
+        Download the app, create your account and enjoy seamless<br/>and real-time insights effortlessly
+      </p>
+    </div>
+  </div>
   </body>
 </html>
