--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Zynpay</title>
+    <title>ZynPay</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/Zynpaylogo.png">
     <script>
       function toggleMenu() {
         document.querySelector(".nav-links").classList.toggle("active");
@@ -15,7 +16,7 @@
     <nav class="navbar">
       <div class="logo">
         <img src="./images/Zynpaylogo.png" alt="Logo" />
-        Zynpay
+        ZynPay
       </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
