script.js file added and index.html and styles.css file updated

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </h2>
       </div>
       <div class="menu-box">
-        <img src="./images/monitoring2 .png" alt="Item 3" />
+        <img src="./images/monitoring .png" alt="Item 3" />
         <h2>
           Live Money Monitoring <br />
           <span
@@ -171,16 +171,73 @@
     </div>
   </div>
 
+    <!-- Success container -->
+    <div class="success">
+      <div class="success-text">
+          <h2>Simple Steps to Success</h2>
+          <p>Download the app, create your account, and enjoy seamless   real-time insights effortlessly.</p>  
+      </div>
 
-  <!-- Success container -->
+      <div class="steps-wrapper">
+          <!-- Row 1: Image Left - Box Right -->
+          <div class="content-wrapper">
+              <div class="steps-container">
+                  <img src="./images/login image.png" alt="App Login">
+              </div>
+              <div class="steps-box">
+                  <h3>Step 1</h3>
+                  <h2>Create Your Account</h2>
+                  <p>Create your account in minutes for seamless payment management.</p>
+                  <button class="get-started-btn">Get Started <span class="arrow">→</span></button>
+              </div>
+          </div>
 
-  <div class="success">
-    <div class="success-text">
-      <h2>Simple Steps to Success</h2>
-      <p>
-        Download the app, create your account and enjoy seamless<br/>and real-time insights effortlessly
-      </p>
-    </div>
+          <!-- Row 2: Box Left - Image Right (Fixed) -->
+          <div class="reverse-layout  ">
+            <div class="steps-container">
+              <img src="./images/Add Your Payment.png" alt="Add Payments">
+          </div>
+              <div class="steps-box">
+                  <h3>Step 2</h3>
+                  <h2>Add Your Payment</h2>
+                  <p>Add your payment details for fast secure transactions</p>
+                  <button class="get-started-btn">Get Started <span class="arrow">→</span></button>
+              </div>
+            
+          </div>
+
+          <!-- Row 3: Image Left - Box Right -->
+          <div class="content-wrapper">
+              <div class="steps-container">
+                  <img src="./images/Start transactions.png" alt="Track Transactions">
+              </div>
+              <div class="steps-box">
+                  <h3>Step 3</h3>
+                  <h2>Start transacting 
+                  </h2>
+                  <p>Start transactions today for a seamless and secure payment experience. </p>
+                  <button class="get-started-btn">Get Started <span class="arrow">→</span></button>
+              </div>
+          </div>
+      </div>
   </div>
+
+  <div class="last-text">
+    <h2>One-stop payment hub.</h2>
+    <p>Your all-in-one solutions for effectless transactions<br /> and financial management</p>
+  </div>
+ <!-- Footer Section -->
+<footer class="footer">
+  <div class="footer-content">
+      <div class="contact-info">
+          <p><strong>Address:</strong> 123 Payment Street, Bangalore, India</p>
+          <p><strong>Email:</strong> support@ZynPay.com</p>
+          <p><strong>Phone:</strong> +91 9876543210</p>
+      </div>
+      <p class="copyright">&copy; 2024 ZynPay. All Rights Reserved.</p>
+  </div>
+</footer>
+<script src="script.js"></script>
   </body>
 </html>
+
