menu-list changes

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="menu-box">
         <img src="./images/monitoring .png" alt="Item 3" />
         <h2>
-          Live Money Monitoring <br />
+          Live Account Monitoring <br />
           <span
             >Stay informed with real-time updates on your financial
             activity</span
