updated index.html code and and some styling part also

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <span>App Store</span>
           </a>
           <a
-            href="https://play.google.com/store"
+            href="https://play.google.com/store/apps/details?id=com.spiway&hl=en"
             target="_blank"
             class="store-btn"
           >
@@ -138,7 +138,7 @@
         </h2>
       </div>
       <div class="menu-box">
-        <img src="./images/monitoring .png" alt="Item 3" />
+        <img src="images/monitoring 3.jpg" alt="Item 3" />
         <h2>
           Live Account Monitoring <br />
           <span
