small changes in footer

--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
 <footer class="footer">
   <div class="footer-content">
       <div class="contact-info">
-          <p><strong>Address:</strong> 123 Payment Street, Bangalore, India</p>
-          <p><strong>Email:</strong> support@ZynPay.com</p>
-          <p><strong>Phone:</strong> +91 9876543210</p>
+          <p><strong>Address:</strong> Spiway, Banglore - 560102</p>
+          <!-- <p><strong>Email:</strong> spiwayservice@gmail.com</p> -->
+          <p><strong>Phone:</strong> +91 70909 54869</p>
       </div>
-      <p class="copyright">&copy; 2024 ZynPay. All Rights Reserved.</p>
+      <p class="copyright">&copy; 2025 Esteem Enterprices. All Rights Reserved.</p>
   </div>
 </footer>
 
