updated logo and logo name and website name and index.html some changes

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ZynPay</title>
+    <title>Spiway</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./images/Zynpaylogo.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/spiway-icon.png">
   </head>
     <!-- Navbar -->
     <nav class="navbar">
       <div class="logo">
-        <img src="./images/Zynpaylogo.png" alt="Logo" />
-        ZynPay
+        <img src="./images/spiway-logo.png" alt="Logo" />
+        Spiway
       </div>
       <ul class="nav-links">
         <li><a href="#">Home</a></li>
@@ -34,7 +34,7 @@
             <img src="./images/avatar2.png" alt="Avatar 2" />
             <img src="./images/avatar3.png" alt="Avatar 3" />
           </div>
-          Trusted by <span>20,000+</span> People
+          Trusted by <span>40,000+</span> People
         </div>
         <h1>Seamless Transactions<br/>At Your Fingertips</h1>
 
@@ -108,9 +108,9 @@
 
     <!--  Delivery featres section -->
     <div class="delivery">
-      <h2>Zynpay Delivery Features.</h2>
+      <h2>Spiway Delivery Features.</h2>
       <p>
-        Zynpay delivers seamless transactions with<br/>Secure transfer and
+        Spiway delivers seamless transactions with<br/>Secure transfer and
         rewards.
       </p>
     </div>
